src/common/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Nunito:wght@400;700;900&family=Nunito+Sans:wght@400;700;900&family=Domine&family=Merriweather&family=Noto+Serif&family=Playfair+Display&family=Roboto&family=Source+Sans+Pro&family=Work+Sans&family=Inter&family=Urbanist&display=swap');

a {
  cursor: pointer;
}

.font-family-roboto {
  font-family: 'Roboto', sans-serif;
}

.font-family-inter {
  font-family: 'Inter', sans-serif;
}

.font-family-work-sans {
  font-family: 'Work Sans', sans-serif;
}

.font-family-montserrat {
  font-family: 'Montserrat', sans-serif;
}

.font-family-urbanist {
  font-family: 'Urbanist', sans-serif;
}

.font-family-source-sans-pro {
  font-family: 'Source Sans Pro', sans-serif;
}

.font-family-merriweather {
  font-family: 'Merriweather', serif;
}

.font-family-playfair-display {
  font-family: 'Playfair Display', serif;
}

.font-family-noto-serif {
  font-family: 'Noto Serif', serif;
}

.font-family-domine {
  font-family: 'Domine', serif;
}

html,
body,
button {
  padding: 0;
  margin: 0;
}

html,
body,
#__next,
.ant-layout {
  height: 100%;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  margin-bottom: 0.25em;
  color: #ffffff;
  font-weight: 800;
  line-height: 1.25em;
  letter-spacing: 0.2;
}

input,
textarea {
  text-align: inherit;
  border: none;
}

body {
  background: #000;
  background-repeat: no-repeat;
}

a {
  color: inherit;
  text-decoration: none;
}

.ant-layout {
  overflow-y: auto;
}

.Toastify__toast {
  border-radius: 8px;
}

.Toastify__progress-bar--default {
  background: #62b0b1;
}

.Toastify__toast--default {
  color: #222222;
  font-family: inherit;
}

.Toastify__toast--default a {
  color: #b92d44;
}

.Toastify__toast--default a:hover {
  opacity: 0.8;
}

